--- a/ClassiNews/backend/requirements.txt
+++ b/ClassiNews/backend/requirements.txt
@@ -1,10 +1,9 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-
-pydantic==2.6.4
-numpy==1.24.4
-pandas==1.5.3
-scikit-learn==1.3.2
-joblib==1.3.2
+pydantic>=2.7.0
+pandas==2.1.3
+numpy==1.26.2
+scikit-learn==1.7.2
 nltk==3.8.1
 python-multipart==0.0.6
+joblib>=1.3.0
